argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example
        image: nanajanashia/argocd-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
